--- a/Map/Map/Map.vcxproj.filters
+++ b/Map/Map/Map.vcxproj.filters
@@ -24,5 +24,8 @@
     <ClCompile Include="Source3.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Source4.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
