--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,9 @@
 /Map/Map/.vs
 /Map/Map/x64
 /Map/Map/Map/x64
+.vsidx
+/.vs/Coding_Test/FileContentIndex
+/.vs/Coding_Test/v17
+/x64/Debug
+/Map/x64
+/Stack/Stack/x64
